wxj：Instance Initialization.

--- a/Practice/javase/src/main/java/wxj/me/javase/initialization/初始化与清理.md
+++ b/Practice/javase/src/main/java/wxj/me/javase/initialization/初始化与清理.md
@@ -24,8 +24,35 @@ Java 尽力保证：所有变量在使用前都能得到恰当的初始化。
 **对象创建的过程**
 
 1. **查找 .class 文件：**首次创建对象，或调用静态方法/静态域首次被访问时，Java 解释器查找类的路径，地位 .class 文件；
+
 2. **加载 .class:**  将 .class 加载到内存中，创建一个 Class 对象，执行所有有关静态初始化的动作（静态初始化只在 Class 对象首次加载的时候进行一次）；
+
 3. **分配内存：** 当使用 new 创建对象的时候，在堆上分配足够的内存空间；
+
 4. **设置默认初值：** 清空分配的堆内存，将对象中的成员变量设置默认初值；
+
 5. **执行初始化：** 执行所有出现于字段定义处的初始化动作；
+
 6. **执行构造器：** 涉及到继承问题。
+
+
+**非静态实例初始化**（事例参考 E15_Instance）
+
+Java 中也有被称为实例化的类似语法，用来初始化每个对象的非静态变量。
+
+* 格式如下：
+
+```java
+// 格式相当于静态方法域去掉 static 关键字
+{
+    car = new Car();
+    car1 = new Car();
+}
+```
+
+* 初始化时机：在构造函数之前，静态初始化之后；
+* 特点：无论调用类的哪个构造函数，实例初始化都会执行；
+* 用处：对于支持 "匿名内部类" 的初始化是必须的。
+
+
+
